# repo-manager

./: Cargo.toml
src/: config.rs  lib.rs  main.rs  utils.rs
src/commands/: config.rs  doctor.rs  goto.rs  mod.rs  pull.rs  remove.rs
src/integrations/: mod.rs
src/integrations/editor/: editor_nvim.rs  editor_vscode.rs  mod.rs
src/integrations/search/: fzf.rs  mod.rs  pick.rs
src/integrations/srcs/: gh.rs  git.rs  list.rs  local.rs  mod.rs
src/integrations/srcs/protocols/: git.rs  github.rs  gitlab.rs  mod.rs  wget.rs
