[package]
name = "gitm"
description = "Git manager is a nice wrapper to git, where it manages repos in a specified directory"
version = "0.1.1"
edition = "2021"

[dependencies]
clier_parser = "0.7.4"
clier = "0.7.2"
url = "2.5.0"
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
