[package]
name = "gitm"
description = "Git manager is a nice wrapper to git, where it manages repos in a specified directory"
license = "MIT"
version = "0.4.3"
edition = "2021"

[dependencies]
clier = "0.7.4"
serde = {version = "1.0.202", features = ["derive"]}
serde_yaml = "0.9.34"
thiserror = "1.0.61"
